[project]
name = "warroom"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Yaroslavtsev", email = "yaroslavtsevam@gmail.com"},
    {name = "Yaroslavtsev Alex", email = "yaroslavtsevam@gmail.com"},
]
dependencies = [
    "nicegui>=2.3.0",
    "frost-sta-client>=1.1.45",
    "pyecharts>=2.0.6",
    "arrow>=1.3.0",
    "pandas>=2.2.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
