[project]
name = "warroom-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alex Yaroslavtsev", email = "yaroslavtsevam@gmail.com" }
]
dependencies = [
    "pyecharts>=2.0.6",
    "pandas>=2.2.3",
    "nicegui>=2.4.0",
    "arrow>=1.3.0",
    "frost-sta-client>=1.1.45",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
